--- a/xmlrpc_server_p3.ipynb
+++ b/xmlrpc_server_p3.ipynb
@@ -33,329 +33,116 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:17:44] \"POST /RPC2 HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [26/Oct/2024 21:52:15] \"POST /RPC2 HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Add log\n",
-      "exc pr\n"
+      "ch:  3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:17:48] \"POST /RPC2 HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [26/Oct/2024 21:52:30] \"POST /RPC2 HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Add log\n"
+      "ch:  3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:17:52] \"POST /RPC2 HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [26/Oct/2024 21:55:10] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 21:56:46] \"POST /RPC2 HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Add log\n"
+      "ch:  3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:17:56] \"POST /RPC2 HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [26/Oct/2024 21:57:04] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 21:57:12] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 21:57:57] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:00:10] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:00:21] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:01:10] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:01:16] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:01:30] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:01:36] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:03:16] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:03:23] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:03:29] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:03:35] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:03:41] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:03:47] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:03:53] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:03:59] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:04:05] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:04:12] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:04:18] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:04:40] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "----------------------------------------\n",
+      "Exception happened during processing of request from ('127.0.0.1', 62665)\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\socketserver.py\", line 316, in _handle_request_noblock\n",
+      "    self.process_request(request, client_address)\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\socketserver.py\", line 347, in process_request\n",
+      "    self.finish_request(request, client_address)\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\socketserver.py\", line 360, in finish_request\n",
+      "    self.RequestHandlerClass(request, client_address, self)\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\socketserver.py\", line 720, in __init__\n",
+      "    self.handle()\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\http\\server.py\", line 427, in handle\n",
+      "    self.handle_one_request()\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\http\\server.py\", line 415, in handle_one_request\n",
+      "    method()\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\xmlrpc\\server.py\", line 546, in do_POST\n",
+      "    self.wfile.write(response)\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\socket.py\", line 687, in write\n",
+      "    return self._sock.send(b)\n",
+      "ConnectionAbortedError: [WinError 10053] An established connection was aborted by the software in your host machine\n",
+      "----------------------------------------\n",
+      "127.0.0.1 - - [26/Oct/2024 22:05:32] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:05:43] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:05:49] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:05:55] \"POST /RPC2 HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Add log\n"
+      "ch:  3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:18:00] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:18:05] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:18:09] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:18:13] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:18:17] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:18:21] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:18:25] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:18:29] \"POST /RPC2 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Oct/2024 19:19:09] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n",
-      "Stats server error!\n",
-      "exc pr\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:19:18] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n",
-      "Stats server error!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:19:27] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n",
-      "Stats server error!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:19:36] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n",
-      "Stats server error!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:19:46] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n",
-      "Stats server error!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:19:55] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n",
-      "Stats server error!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:20:01] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n",
-      "Stats server error!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:20:07] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n",
-      "Stats server error!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:20:13] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n",
-      "Stats server error!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:20:19] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n",
-      "Stats server error!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:20:25] \"POST /RPC2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add log\n",
-      "Stats server error!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Oct/2024 19:20:31] \"POST /RPC2 HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [26/Oct/2024 22:06:06] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:06:14] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:06:40] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:07:46] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:08:16] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:08:42] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:09:08] \"POST /RPC2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/Oct/2024 22:09:34] \"POST /RPC2 HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -368,14 +155,12 @@
     "import xmlrpc.client\n",
     "\n",
     "import datetime\n",
+    "import pickle\n",
+    "import pandas as pd\n",
     "\n",
     "\n",
     "class RequestHandler(SimpleXMLRPCRequestHandler):\n",
     "    rpc_paths = ('/RPC2',)\n",
-    "    \n",
-    "    \n",
-    "TIMEOUT = 5\n",
-    "socket.setdefaulttimeout(TIMEOUT)\n",
     "\n",
     "server = SimpleXMLRPCServer((\"localhost\", 8008), \n",
     "                            requestHandler=RequestHandler)\n",
@@ -386,43 +171,43 @@
     "\n",
     "\n",
     "# Добавление в лог через сервер\n",
-    "def add_log(log_line):\n",
-    "    print('Add log')\n",
-    "    try:\n",
-    "        stats_server.add_log(log_line)\n",
-    "    except Exception as e:\n",
-    "        print('Stats server error!')\n",
-    "    return True\n",
+    "# def add_log(log_line):\n",
+    "#     print('Add log')\n",
+    "#     try:\n",
+    "#         stats_server.add_log(log_line)\n",
+    "#     except Exception as e:\n",
+    "#         print('Stats server error!')\n",
+    "#     return True\n",
     "    \n",
     "\n",
     "# Тест\n",
     "def ping():\n",
-    "    add_log('ping')\n",
-    "    print('exc pr')\n",
+    "#     add_log('ping')\n",
+    "#     print('exc pr')\n",
     "    return True\n",
     "server.register_function(ping, 'ping')\n",
     "\n",
     "# Время сервера\n",
     "def now():\n",
-    "    add_log('now')    \n",
+    "#     add_log('now')    \n",
     "    return datetime.datetime.now()\n",
     "server.register_function(now, 'now')\n",
     "\n",
     "# Отображение строкового вида, типа и значений\n",
     "def show_type(arg):\n",
-    "    add_log('type')\n",
+    "#     add_log('type')\n",
     "    return (str(arg), str(type(arg)), arg)\n",
     "server.register_function(show_type, 'type')\n",
     "\n",
     "# Сумма\n",
     "def test_sum(a, b):\n",
-    "    add_log('sum')\n",
+    "#     add_log('sum')\n",
     "    return a + b\n",
     "server.register_function(test_sum, 'sum')\n",
     "\n",
     "# Степень\n",
     "def test_pow(a, b):\n",
-    "    add_log('pow')\n",
+    "#     add_log('pow')\n",
     "    return a**b\n",
     "server.register_function(test_pow, 'pow')\n",
     "\n",
@@ -439,7 +224,7 @@
     "\n",
     "# Проверка нахождения клиента в черном списке с использованием Pandas DataFrame\n",
     "def black_list_check_fio_birth(surname, name, patronymic, birthdate):\n",
-    "    add_log('black_list_check_fio_birth')\n",
+    "#     add_log('black_list_check_fio_birth')\n",
     "    frame = pd.read_csv('bad_boys2.csv', header=0, sep=',', encoding='utf8')\n",
     "\n",
     "    # Приведение столбцов к строковому типу для корректного сравнения\n",
@@ -465,7 +250,7 @@
     "\n",
     "# Бинарная передача данных\n",
     "def send_back_binary(bin_data):\n",
-    "    add_log('send_back_binary')\n",
+    "#     add_log('send_back_binary')\n",
     "    data = bin_data.data\n",
     "    return xmlrpc.client.Binary(data)\n",
     "\n",
@@ -473,7 +258,7 @@
     "\n",
     "# Инверсия цвета для изображений RGB (M, N, 3) и монохромных (M, N, 1)\n",
     "def send_back_inversion(bin_data):\n",
-    "    add_log('send_back_inversion')\n",
+    "#     add_log('send_back_inversion')\n",
     "    \n",
     "    img_arr = pickle.loads(bin_data.data)\n",
     "    \n",
@@ -505,7 +290,7 @@
     "\n",
     "# Бинаризация изображения по заданному порогу\n",
     "def binary_threshold(bin_data, threshold):\n",
-    "    add_log('binary_threshold')\n",
+    "#     add_log('binary_threshold')\n",
     "    img_arr = pickle.loads(bin_data.data)\n",
     "\n",
     "    # Проверка корректности порога\n",
@@ -547,7 +332,7 @@
     "\n",
     "# Разворот изображения относительно вертикали\n",
     "def vertical_flip(bin_data):\n",
-    "    add_log('vertical_flip')\n",
+    "#     add_log('vertical_flip')\n",
     "    \n",
     "    img_arr = pickle.loads(bin_data.data)\n",
     "\n",
